--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.52.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "nodemon": "^3.0.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
